--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=PT+Sans+Narrow&display=swap');
 
 * {
   margin: 0;
@@ -11,20 +10,65 @@
 
 body {
   font-family: 'Open sans', sans-serif;
-  font-size: 15px;
+  color: #313638;
+  /* color: #3b2143; */
 }
 
 main {
   flex-basis: 40%;
   height: 100vh;
   padding: 60px 45px;
+  background-color: #FAFAFA;
+}
+
+.title {
+  letter-spacing: 1px;
+}
+
+.description {
+  margin: 40px 0;
 }
 
 .social-links li {
-  margin-right: 5px;
+  margin-right: 15px;
+}
+
+.social-links img {
+  filter: grayscale(100%);
+  opacity: 0.7;
+}
+
+.social-links img:hover {
+  opacity: 1;
+  filter: none;
+}
+
+.hello-btn:hover {
+  color: #fff;
+  background-color: #2aa79c;
+  text-decoration: none;
+}
+
+.hello-btn {
+  padding: 12px 70px;
+  margin-top: 50px;
+  background-color: #3cbbb1;
+  border-radius: 50px;
+  color: #fff;
+  width: fit-content;
 }
 
 aside {
   flex-basis: 60%;
-  background-color: green;
+  background-color: #E8E9EB;
+}
+
+@media screen and (min-width: 768px) {
+  main {
+    padding: 0 85px;
+  }
+
+  .hello-btn {
+    margin-top: 60px;
+  }
 }
