--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ main {
 }
 
 .social-links img {
-  filter: grayscale(90%) drop-shadow(16px 16px 20px blue);
+  filter: grayscale(100%) drop-shadow(16px 16px 20px blue);
 }
 
 .social-links img:hover {
@@ -72,7 +72,6 @@ main {
   background-color: #5B5F97;
   border-radius: 50px;
   color: #fff;
-  width: fit-content;
 }
 
 aside {
@@ -82,6 +81,10 @@ aside {
 
 section {
   padding: 60px 45px;
+}
+
+.order {
+  margin: 2rem 0;
 }
 
 .project-mobile {
