--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .red-sec {
-  background-color: #e17055;
+  background-color: #ff7675;
 }
 
 .black-sec {
@@ -17,11 +17,12 @@
 }
 
 .grey-sec {
-  background-color: #E0DFD5;
+  background-color: #2c3e50;
 }
 
 .blue-sec {
-  background-color: #0984e3;
+  /* background-color: #0984e3; */
+  background-color: #3498db;
 }
 
 .green-sec {
