--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ main {
   background-color: #0984e3;
   border-radius: 50px;
   color: #fff;
-  width: 13.5rem;
+  width: fit-content;
 }
 
 aside {
