--- a/style.css
+++ b/style.css
@@ -125,13 +125,13 @@ section {
 @media screen and (min-width: 768px) {
   main {
     padding: 50px 85px;
-    height: fit-content;
+    height: 100vh;
     position: sticky;
     top: 0;
   }
 
   .hello-btn {
-    margin-top: 45px;
+    margin-top: 2.8rem;
   }
 
   section {
@@ -139,7 +139,6 @@ section {
   }
 
   .project-mobile .image img {
-    width: auto;
-    height: 30rem;
+    width: 70%;
   }
 }
