--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@
 }
 
 .blue-sec {
-  background-color: #0984e3;
+  /* background-color: #0984e3; */
   /* background-color: #3498db; */
+  background-color: #130f40;
 }
 
 .green-sec {
@@ -98,6 +99,7 @@ section {
 
 .project-mac {
   color: #FAFAFA;
+  object-fit: contain;
 }
 
 .project-mobile .image,
@@ -112,13 +114,12 @@ section {
 .project-mac .image img {
   align-self: center;
   /* border: 1px solid; */
-  /* transform: scale3d(1.05, 1.05, 1.9); */
-  transform: scale(1.3);
+  /* transform: scale(1.3); */
 }
 
 .project-mobile .image img {
   max-width: 50%;
-  transform: scale(1.1)
+  /* transform: scale(1.1) */
 }
 
 .project-mobile .project-desc,
@@ -126,6 +127,46 @@ section {
   flex: 1;
   /* border: 1px solid; */
 }
+
+.project-name {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.project-desc p {
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+
+.project-links {
+  margin-top: 1rem;
+  color: #ecf0f1;
+  font-weight: bold;
+}
+
+.project-links a:hover {
+  color: #ecf0f1;
+}
+
+.project-links a {
+  color: #ecf0f1;
+}
+
+.articles a:hover {
+  color: #0984e3;
+  text-decoration: none;
+}
+
+.articles a {
+  font-size: 14px;
+  font-weight: 600;
+  color: #130f40;
+}
+
+.articles hr {
+  border-style: dashed;
+}
+
 
 @media screen and (min-width: 768px) {
   main {
@@ -139,12 +180,8 @@ section {
     margin-top: 2.8rem;
   }
 
-  .project-mac {
+  section {
     padding: 5rem;
-  }
-
-  .project-mobile {
-    padding: 0 2rem;
   }
 
   .project-mobile .image img,
