--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 
 body {
   font-family: 'Open sans', sans-serif;
-  color: #3A3238;
+  color: #535c68;
 }
 
 main {
@@ -52,17 +52,22 @@ main {
 }
 
 .social-links li {
-  margin-right: 1rem;
+  margin-right: 1.3rem;
+  font-size: 1.8rem;
 }
 
-.social-links img {
-  filter: grayscale(100%);
-  opacity: 0.6;
+.social-links .file {
+  font-size: 1.4rem;
+  align-self: center;
 }
 
-.social-links img:hover {
+.social-links a:hover {
   opacity: 1;
-  filter: drop-shadow(16px 16px 20px #1073be);
+}
+
+.social-links a {
+  color: #535c68;
+  opacity: 0.6;
 }
 
 .hello-btn:hover {
@@ -73,7 +78,7 @@ main {
 
 .hello-btn {
   padding: 12px 70px;
-  margin-top: 4rem;
+  margin-top: 2.5rem;
   background-color: #0984e3;
   border-radius: 50px;
   color: #fff;
@@ -99,7 +104,6 @@ section {
 
 .project-mac {
   color: #FAFAFA;
-  object-fit: contain;
 }
 
 .project-mobile .image,
@@ -107,25 +111,20 @@ section {
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid; */
 }
 
 .project-mobile .image img,
 .project-mac .image img {
   align-self: center;
-  /* border: 1px solid; */
-  /* transform: scale(1.3); */
 }
 
 .project-mobile .image img {
   max-width: 50%;
-  /* transform: scale(1.1) */
 }
 
 .project-mobile .project-desc,
 .project-mac .project-desc  {
   flex: 1;
-  /* border: 1px solid; */
 }
 
 .project-name {
@@ -174,10 +173,6 @@ section {
     height: 100vh;
     position: sticky;
     top: 0;
-  }
-
-  .hello-btn {
-    margin-top: 2.8rem;
   }
 
   section {
