--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@
   background-color: #99C1B9;
 }
 
+.gold-sec {
+  background-color: #ff9f43;
+}
+
+.test {
+  background-color: #222f3e;
+}
+
 .keyword {
   color: #1073be;
 }
