--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap");
 
-* {
+*, *::after, *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -44,7 +44,8 @@
 body {
   font-family: "Open sans", sans-serif;
   color: #535c68;
-  max-width: 1350px;
+  max-width: 1800px;
+  margin: auto;
 }
 
 main {
