--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ main {
   background-image: url(./assets/images/profile_pic.jpg);
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title {
