--- a/style.css
+++ b/style.css
@@ -53,11 +53,11 @@ body {
 main {
   flex-basis: 40%;
   padding: 60px 45px 80px 45px;
-  /* background-color: #fafafa; */
-  background-image: url(./assets/images/profile_pic.jpg);
+  background-color: #fafafa;
+  /* background-image: url(./assets/images/profile_pic.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
 
 .title {
