--- a/style.css
+++ b/style.css
@@ -54,11 +54,6 @@ main {
   flex-basis: 40%;
   padding: 60px 45px 80px 45px;
   background-color: #fafafa;
-
-  /* background-image: url(./assets/images/profile_pic.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; */
 }
 
 .title {
@@ -146,6 +141,7 @@ section {
   flex: 1;
   display: flex;
   flex-direction: column;
+  margin-right: 1.5rem;
 }
 
 .project-mobile .image img,
