--- a/style.css
+++ b/style.css
@@ -51,9 +51,23 @@ body {
 }
 
 main {
+  position: relative;
   flex-basis: 40%;
   padding: 60px 45px 80px 45px;
   background-color: #fafafa;
+}
+
+main::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(./assets/images/profile_pic.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: .08;
+  z-index: -1;
 }
 
 .title {
@@ -64,7 +78,9 @@ main {
 .description {
   margin: 2.2rem 0;
   font-size: 14px;
+  line-height: 1.6;
   letter-spacing: 1px;
+  font-weight: 500;
 }
 
 .social-links li {
@@ -110,6 +126,7 @@ main {
   color: #fff;
   background-color: #1073be;
   text-decoration: none;
+  cursor: pointer;
 }
 
 aside {
