update bg gold color

--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@
 }
 
 .green-sec {
-  background-color: #99c1b9;
+  background-color: #579b8d;
 }
 
 .gold-sec {
-  background-color: #ff9f43;
+  background-color: #0f0344;
 }
 
 .test {
